*** Also, it is _highly_ advisable to backup your data before upgrading ***

Version 1.8.1

* Added some missing imports which caused compilation errors for
  Perl 5.8.3 on Solaris when checksetup.pl was run.

* Made checksetup.pl more graceful when DBI.pm is not installed, and
  it is checking what other database modules are required.

The following changes were from Jason Remillard:

* A bug in the metric support has been fixed, which prevented the
  metric data from being usable if more than one reviewer was present.

* Emails sent from topic property changes now include more information
  such as what specific properties were changes.  Topic creation
  emails also include the list of files which have been changed.

Version 1.8.0

* Initial support for Perforce integration.  Can handle topic text
  from a Perforce describe command, such as:
  "p4 describe -du <changenumber>" or "p4 diff -du".

* Codestriker now works under IIS as well as Apache.  Use IPC::Open3
  rather than IPC::Run (which doesn't work under IIS) within the
  CvsLocal and CvsPserver modules when fetching remote diff data from
  CVS.  IPC::Run is no longer used.

* A new configuration variable $tmpdir is in codestriker.conf for
  unusual setups which can't use the system default temporary
  directory for the creation of temporary files.  Win32 systems are
  the usual culprit.

* The CVS rdiff parser didn't correctly handle new files within the
  diff on Win32 platforms.

* Add more win32 example configuration to codestriker.conf.

* Include the relevant DBD modules in the checksetup.pl dependency
  list, depending on what database system has been configured.

* Some minor fixes to fully support Win32-based CVS repositories,
  including use of the older-style :local:c:\\cvsrep syntax.  Also be
  more robust in handling directory separators as either forward or
  backward slashes, since different versions of CVSNT support this.
  Make sure the CVS executable path is quoted, since it will often